--- a/Plum/Base.lproj/Main.storyboard
+++ b/Plum/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
         <!--First Aid-->
         <scene sceneID="HgS-U1-UTT">
             <objects>
-                <viewController title="First Aid" id="CLM-jN-ZE2" sceneMemberID="viewController">
+                <viewController title="First Aid" id="CLM-jN-ZE2" customClass="FirstAidViewController" customModule="Plum" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xL9-sp-A5S"/>
                         <viewControllerLayoutGuide type="bottom" id="EKG-Hc-lVv"/>
@@ -98,10 +98,64 @@
                     <view key="view" contentMode="scaleToFill" id="Kf7-Zc-aEZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p69-vB-9xu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="58" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="firstAidTableViewCell" id="ErH-8N-7e7" customClass="FirstAidTableViewCell" customModule="Plum" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ErH-8N-7e7" id="5fJ-8P-B9J">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FirstAidTableViewCell_CPR" translatesAutoresizingMaskIntoConstraints="NO" id="eXF-Y2-luI">
+                                                    <rect key="frame" x="15" y="7" width="29" height="29"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="29" id="Nt0-Ft-ynM"/>
+                                                        <constraint firstAttribute="width" constant="29" id="uwY-6a-Nhu"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tE-Xf-duu">
+                                                    <rect key="frame" x="58" y="11" width="309" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4tE-Xf-duu" firstAttribute="leading" secondItem="eXF-Y2-luI" secondAttribute="trailing" constant="14" id="506-W2-6XO"/>
+                                                <constraint firstAttribute="bottom" secondItem="4tE-Xf-duu" secondAttribute="bottom" constant="11" id="KT4-62-0S5"/>
+                                                <constraint firstItem="eXF-Y2-luI" firstAttribute="leading" secondItem="5fJ-8P-B9J" secondAttribute="leading" constant="15" id="Vcb-vs-TiN"/>
+                                                <constraint firstItem="4tE-Xf-duu" firstAttribute="top" secondItem="5fJ-8P-B9J" secondAttribute="top" constant="11" id="Xkl-7g-cso"/>
+                                                <constraint firstAttribute="bottom" secondItem="eXF-Y2-luI" secondAttribute="bottom" constant="7" id="ZcX-9V-Yip"/>
+                                                <constraint firstAttribute="trailing" secondItem="4tE-Xf-duu" secondAttribute="trailing" constant="8" id="d1n-R3-fCe"/>
+                                                <constraint firstItem="eXF-Y2-luI" firstAttribute="top" secondItem="5fJ-8P-B9J" secondAttribute="top" constant="7" id="dk9-PV-lpa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="FirstAidTableViewCellImageView" destination="eXF-Y2-luI" id="WaU-De-dzR"/>
+                                            <outlet property="FirstAidTableViewCellLabel" destination="4tE-Xf-duu" id="2xw-Q0-QX1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="p69-vB-9xu" firstAttribute="leading" secondItem="Kf7-Zc-aEZ" secondAttribute="leading" id="LEU-8h-cQ0"/>
+                            <constraint firstAttribute="trailing" secondItem="p69-vB-9xu" secondAttribute="trailing" id="Mx2-Rs-Usc"/>
+                            <constraint firstItem="p69-vB-9xu" firstAttribute="top" secondItem="Kf7-Zc-aEZ" secondAttribute="top" id="xal-bR-bgh"/>
+                            <constraint firstAttribute="bottom" secondItem="p69-vB-9xu" secondAttribute="bottom" id="yJa-mX-zQi"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="First Aid" id="Ocj-mQ-wx3"/>
+                    <connections>
+                        <outlet property="firstAidTableView" destination="p69-vB-9xu" id="Dbv-eS-Fnf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CI7-vN-dIa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -215,6 +269,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="FirstAidTableViewCell_CPR" width="29" height="29"/>
         <image name="tabBarItemA" width="21" height="19"/>
         <image name="tabBarItemA_selected" width="21" height="19"/>
         <image name="tabBarItemB" width="19" height="24"/>
