--- a/Plum/Base.lproj/Main.storyboard
+++ b/Plum/Base.lproj/Main.storyboard
@@ -22,7 +22,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Profile" id="jUb-Dk-Lxs"/>
+                    <navigationItem key="navigationItem" title="Profile" id="jUb-Dk-Lxs">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="NgR-Il-plx">
+                            <color key="tintColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NsX-w5-jjn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -138,6 +142,7 @@
                                         <connections>
                                             <outlet property="FirstAidTableViewCellImageView" destination="eXF-Y2-luI" id="WaU-De-dzR"/>
                                             <outlet property="FirstAidTableViewCellLabel" destination="4tE-Xf-duu" id="2xw-Q0-QX1"/>
+                                            <segue destination="WJb-IQ-Ysa" kind="show" id="iQb-rD-c9Y"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -160,6 +165,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CI7-vN-dIa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1924" y="-180.35982008995504"/>
+        </scene>
+        <!--First Aid Detail View Controller-->
+        <scene sceneID="5Rk-Fc-Rke">
+            <objects>
+                <viewController id="WJb-IQ-Ysa" customClass="FirstAidDetailViewController" customModule="Plum" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="k6L-wi-axZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="46I-9j-XTu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wAu-Mx-cU7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qhs-iz-e9D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2673" y="-180"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="mpR-qD-XaS">
