Add Profile View Framework

--- a/Plum/Base.lproj/Main.storyboard
+++ b/Plum/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Profile-->
         <scene sceneID="Ckd-Dn-RyX">
             <objects>
-                <viewController title="Profile" id="9ft-Sg-tvh" sceneMemberID="viewController">
+                <viewController title="Profile" id="9ft-Sg-tvh" customClass="ProfileViewController" customModule="Plum" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FLd-za-3c4"/>
                         <viewControllerLayoutGuide type="bottom" id="jdy-jB-Pct"/>
@@ -23,14 +23,84 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="jUb-Dk-Lxs">
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="NgR-Il-plx">
+                        <barButtonItem key="rightBarButtonItem" title="Add" style="done" id="NgR-Il-plx">
                             <color key="tintColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="CPV-VB-Xsg" kind="presentation" id="XJk-e8-Jpq"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NsX-w5-jjn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1924" y="474.51274362818594"/>
+        </scene>
+        <!--Profile Detail View Controller-->
+        <scene sceneID="Mp6-7l-2AV">
+            <objects>
+                <viewController id="CPV-VB-Xsg" customClass="ProfileDetailViewController" customModule="Plum" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Bx-DZ-6xR"/>
+                        <viewControllerLayoutGuide type="bottom" id="S3n-92-3wy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lik-mN-8t3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="DNc-vO-YS1">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileDetailTableViewCell" rowHeight="64" id="MX1-uS-xQj" customClass="ProfileDetailTableViewCell" customModule="Plum" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="56" width="375" height="64"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MX1-uS-xQj" id="Vdz-aU-fCK">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="63"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JV7-rI-Sng">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="New" id="1Oo-MX-zuT">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" style="plain" id="IEk-qE-EUV">
+                                            <connections>
+                                                <action selector="leftBarButtonItemClicked:" destination="CPV-VB-Xsg" id="fUK-Tu-gcY"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="U5e-tj-k43">
+                                            <connections>
+                                                <action selector="rightBarButtonItemClicked:" destination="CPV-VB-Xsg" id="9jO-Sb-cNy"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="1" green="0.2347312272" blue="0.31448560949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="DNc-vO-YS1" secondAttribute="trailing" id="13Q-ZQ-zbR"/>
+                            <constraint firstAttribute="trailing" secondItem="JV7-rI-Sng" secondAttribute="trailing" id="JxS-p5-Vki"/>
+                            <constraint firstItem="DNc-vO-YS1" firstAttribute="top" secondItem="JV7-rI-Sng" secondAttribute="bottom" id="OcZ-3w-olE"/>
+                            <constraint firstItem="JV7-rI-Sng" firstAttribute="leading" secondItem="Lik-mN-8t3" secondAttribute="leading" id="YqF-gn-U2I"/>
+                            <constraint firstItem="DNc-vO-YS1" firstAttribute="leading" secondItem="Lik-mN-8t3" secondAttribute="leading" id="dlY-nd-nhG"/>
+                            <constraint firstItem="DNc-vO-YS1" firstAttribute="top" secondItem="JV7-rI-Sng" secondAttribute="bottom" id="eik-5i-bKj"/>
+                            <constraint firstItem="S3n-92-3wy" firstAttribute="top" secondItem="DNc-vO-YS1" secondAttribute="bottom" id="h1P-d8-jvP"/>
+                            <constraint firstItem="JV7-rI-Sng" firstAttribute="top" secondItem="9Bx-DZ-6xR" secondAttribute="bottom" id="vBd-ri-1FA"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="leftBarButtonItem" destination="IEk-qE-EUV" id="OS2-pv-qag"/>
+                        <outlet property="profileDetailTableView" destination="DNc-vO-YS1" id="y8R-fZ-fkv"/>
+                        <outlet property="rightBarButtonItem" destination="U5e-tj-k43" id="YIB-z5-G4z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tja-AM-pxG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2672.8000000000002" y="474.51274362818594"/>
         </scene>
         <!--Nearby-->
         <scene sceneID="4Fv-Xy-uU7">
